# python-project-template

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json
.github/workflows/: check.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlint  .travis.yml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: issue.yaml
{{cookiecutter.project_slug}}/.github/workflows/: bump.yml  bumpversion.yml  check.yml  check_pr_title.yml  github_pages.yml  maturin.yml  pr.yml  publish_pypi.yml  pypi.yml
{{cookiecutter.project_slug}}/src/: lib.rs
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/cli/: app.py
{{cookiecutter.project}}/: .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project}}/.github/ISSUE_TEMPLATE/: issue.yaml
{{cookiecutter.project}}/.github/workflows/: check.yml
{{cookiecutter.project}}/tests/: test_{{cookiecutter.project_slug}}.py
