[package]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "{{ cookiecutter.pkg_name }}"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
